--- a/config/ibc/config.ini
+++ b/config/ibc/config.ini
@@ -326,7 +326,7 @@ ReadOnlyLogin=no
 # set the relevant checkbox (this only needs to be done once) and
 # not provide a value for this setting.
 
-ReadOnlyApi=
+ReadOnlyApi=no
 
 
 # Market data size for US stocks - lots or shares
