--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,8 +27,9 @@ jobs:
 
       - name: Push image
         run: |
+          USER_NAME=ttamg76
           IMAGE_NAME=ib-gateway
-          IMAGE_ID=ttamg76/$IMAGE_NAME
+          IMAGE_ID=$USER_NAME/$IMAGE_NAME
           # Change all uppercase to lowercase
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
           # Strip git ref prefix from version
